# roamvault

./: .gitignore  ARCHITECTURE.md
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: db.rs  main.rs  models.rs  parser.rs  storage.rs
backend/src/routes/: chat.rs  media.rs  mod.rs  storage.rs  upload.rs  view.rs
desktop/: Cargo.toml
desktop/src/: archiver.rs  b2.rs  config.rs  main.rs  restorer.rs  stub.rs  watcher.rs
desktop/ui/: main.slint
ios-extensions/: README.md
ios-extensions/RoamVaultFileProvider/: FileProviderEnumerator.swift  FileProviderExtension.swift  FileProviderItem.swift  Info.plist
ios-extensions/RoamVaultSync/: PhotoUploader.swift  SyncManager.swift
ios-extensions/Shared/: B2Config.swift  RoamVaultAPI.swift
mobile/: .flutter-plugins-dependencies  pubspec.yaml
mobile/.dart_tool/: package_config.json  package_graph.json
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
mobile/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
mobile/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
mobile/lib/: main.dart
mobile/lib/models/: backup_state.dart
mobile/lib/screens/: app_analysis_screen.dart  backup_screen.dart  dashboard_screen.dart  settings_screen.dart  viewer_screen.dart
mobile/lib/services/: backup_service.dart  whatsapp_service.dart
mobile/test/: widget_test.dart
viewer/: Caddyfile  package-lock.json  package.json
viewer/src/: App.css  App.tsx  Upload.css  Upload.tsx  index.tsx
