[package]
name = "roamvault-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
bytes = "1"
zip = "2"
brotli = "7"
reqwest = { version = "0.12", features = ["stream", "multipart", "json"] }
tokio-util = { version = "0.7", features = ["io"] }
flatbuffers = "24"
regex = "1"
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true
