[package]
name = "roamvault-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
hex = "0.4"
brotli = "6"
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
urlencoding = "2"
log = "0.4"
env_logger = "0.11"
tray-icon = "0.14"
image = "0.25"

[build-dependencies]
slint-build = "1"
